# vircadia-native-core

./: .VERSION  .clang-format  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .grenrc.js  BUILD.md  BUILD_ANDROID.md  BUILD_LAUNCHER.md  BUILD_LINUX.md  BUILD_LINUX_CHEATSHEET.md  BUILD_OSX.md  BUILD_QUEST.md  BUILD_WIN.md  BuckyBalls.cpp  BuckyBalls.h  CMakeGraphvizOptions.cmake  CMakeLists.txt  CMakeLists.txt.user.18  CODING_STANDARD.md  CONTRIBUTING.md  Doxyfile  INSTALL.md  INSTALLER.md  LICENSE  LinkHifiShared.cmake  Makefile  Midi.cpp  Midi.h  README  README.md  README_hifi.md  SerialInterface.cpp  SerialInterface.h  Test Plan 2.docx  VCPKG.md  VoxelScriptingInterface.cpp  XylophoneRezzer.js  (+50 more)
android/app/: CMakeLists.txt  build.gradle
animation-server/: CMakeLists.txt
animation-server/src/: AnimationServer.cpp  AnimationServer.h  main.cpp
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.cpp  Agent.h  AgentScriptingInterface.cpp  AgentScriptingInterface.h  AssignmentAction.cpp  AssignmentAction.h  AssignmentActionFactory.cpp  AssignmentActionFactory.h  AssignmentClient.cpp  AssignmentClient.h  AssignmentClientApp.cpp  AssignmentClientApp.h  AssignmentClientChildData.cpp  AssignmentClientChildData.h  AssignmentClientLogging.cpp  AssignmentClientLogging.h  AssignmentClientMonitor.cpp  AssignmentClientMonitor.h  AssignmentDynamic.cpp  AssignmentDynamic.h  AssignmentDynamicFactory.cpp  AssignmentDynamicFactory.h  AssignmentFactory.cpp  AssignmentFactory.h  AssignmentThread.cpp  AssignmentThread.h  AvatarAudioTimer.cpp  AvatarAudioTimer.h  ThreadedAssignment.h  VoxelScriptingInterface.cpp  VoxelScriptingInterface.h  main.cpp
audio-mixer/: CMakeLists.txt
audio-mixer/src/: AvatarAudioRingBuffer.cpp  AvatarAudioRingBuffer.h  InjectedAudioRingBuffer.cpp  InjectedAudioRingBuffer.h  PositionalAudioRingBuffer.cpp  PositionalAudioRingBuffer.h  main.cpp
avatar/: CMakeLists.txt
avatar-mixer/: CMakeLists.txt  cachedStars.txt
avatar-mixer/src/: AvatarAgentData.cpp  main.cpp
avatar/src/: AvatarAgentData.cpp  AvatarAgentData.h  avatar.cpp  avatar.h  main.cpp
console/: .gitignore  CMakeLists.txt  README.md  index.html  index.js  main.js  package.json  packager.js
console/modules/: hf-process.js  path-finder.js
console/resources/: console.icns
console/src/: downloader.css  downloader.html  downloader.js  index.html  index.js  log.css  log.html  log.js  main.js  splash.css  splash.html
data-server/: CMakeLists.txt
data-server/src/: DataServer.cpp  DataServer.h  main.cpp
domain/: CMakeLists.txt  trigger
domain-server/: CMakeLists.txt
domain-server/resources/: describe-settings.json
domain-server/src/: AgentPermissions.h  AssetsBackupHandler.cpp  AssetsBackupHandler.h  BackupHandler.h  BackupSupervisor.cpp  BackupSupervisor.h  ContentSettingsBackupHandler.cpp  ContentSettingsBackupHandler.h  DTLSServerSession.cpp  DTLSServerSession.h  DomainContentBackupManager.cpp  DomainContentBackupManager.h  DomainGatekeeper.cpp  DomainGatekeeper.h  DomainMetadata.cpp  DomainMetadata.h  DomainServer.cpp  DomainServer.h  DomainServerAcmeClient.cpp  DomainServerAcmeClient.h  DomainServerExporter.cpp  DomainServerExporter.h  DomainServerNodeData.cpp  DomainServerNodeData.h  DomainServerSettingsManager.cpp  DomainServerSettingsManager.h  DomainServerWebSessionData.cpp  DomainServerWebSessionData.h  EntitiesBackupHandler.cpp  EntitiesBackupHandler.h  NodeConnectionData.cpp  NodeConnectionData.h  PendingAssignedNodeData.cpp  PendingAssignedNodeData.h  WalletTransaction.cpp  WalletTransaction.h  main.cpp  mongoose.c  mongoose.h
domain/src/: main.cpp
gvr-interface/: CMakeLists.txt
gvr-interface/android/: AndroidManifest.xml
gvr-interface/src/: Client.cpp  Client.h  GVRInterface.cpp  GVRInterface.h  GVRMainWindow.cpp  GVRMainWindow.h  InterfaceView.cpp  InterfaceView.h  LoginDialog.cpp  LoginDialog.h  RenderingClient.cpp  RenderingClient.h  client.cpp  client.h  main.cpp
gvr-interface/templates/: InterfaceBetaActivity.java.in  hockeyapp.xml.in
ice-server/: CMakeLists.txt
ice-server/src/: IceServer.cpp  IceServer.h  main.cpp
injector/: CMakeLists.txt
injector/src/: injector.cpp  main.cpp
interface/: CMakeCache.txt  CMakeLists.txt  Interface.icns  InterfaceConfig.h.in  InterfaceVersion.h.in  cmake_install.cmake  interface.entitlements  interface.exe.manifest  interface.icns  interface_en.ts
interface/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
interface/i18n/: interface_da.ts  interface_en.ts
interface/icon/: Interface.icns  Thumbs.db  interface-beta.icns  interface.icns
interface/interface.xcodeproj/: project.pbxproj
interface/resources/: gen_stars.py  interface.qrc  models.json  resources.qrc  stars.txt  start.json
interface/src/: #Application.cpp#  AboutUtil.cpp  AboutUtil.h  AbstractLoggerInterface.h  Agent.cpp  Agent.h  AndroidHelper.cpp  AndroidHelper.h  AppNapDisabler.h  AppNapDisabler.mm  Application - Copy.cpp  Application.cpp  Application.h  Application_jni.cpp  Audio.cpp  (+278 more)
mixer/: CMakeLists.txt  socket.rb
pairing-server/: CMakeLists.txt
plugins/: CMakeLists.txt
screenshare/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  packager.js  packager_mac.js
server-console/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  packager.js
shared/: CMakeLists.txt  trigger
stack-manager/: CMakeLists.txt  windows_icon.rc
svo-viewer/: CMakeLists.txt  svo-viewer-version.h.in  svo-viewer.icns
tests/: CMakeLists.txt  GLMTestUtils.h  QTestExtensions.h  QTestExtensions.hpp
tests-manual/: CMakeLists.txt
tools/: CMakeLists.txt  README.md  atp-extract.py  avatar-json-to-dot.js  dimensions.mel  gen_stars.py  hfudt.lua  library-depends.gv  noramlizeFrame.py  normalizeFrame.py  objtohio.php  refresh-tags.sh  sendvoxels.php  shadergen.py  srgb_gen.py
voxel/: CMakeLists.txt
voxel-edit/: CMakeLists.txt
voxel-import/: CMakeLists.txt
voxellib/: CMakeLists.txt
(+10660 files in other folders)
